# jup-discord-price-bot

./: .env-sample  .gitignore  Cargo.toml  README.md  Secrets-sample.toml
src/: main.rs
